Sat Apr 26 11:08:10 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Messaging/Messaging_No_ImplC.cpp: Missing template
	  instantiations.

Sat Apr 26 10:58:31 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/PolicyC.cpp: Removed duplicate template instantiations.

Sat Apr 26 10:52:46 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/PortableServer/ImR_LocatorC.i: Fixed a warning in VC++ builds.

Sat Apr 26 08:42:46 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Environment.cpp: Removed operator= for
	  CORBA::Environment_var since they shoudl be taken care by the
	  template classes. 

Fri Apr 25 22:29:08 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_sequence/sequence_cs.cpp: Added explicit
	  template instations for the base class sequences. 

Fri Apr 25 22:26:21 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/DynamicC.cpp:
	* tao/DynamicC.h:
	* tao/DynamicC.i:
	* tao/OctetSeqC.cpp:
	* tao/OctetSeqC.h:
	* tao/OctetSeqC.i:
	* tao/PortableServer/Default_ORTC.cpp:
	* tao/PortableServer/Default_ORTC.h:
	* tao/PortableServer/Default_ORTC.i:
	* tao/PortableServer/ImR_ActivatorC.h:
	* tao/PortableServer/ImR_LocatorC.cpp:
	* tao/PortableServer/ImR_LocatorC.h:
	* tao/PortableServer/ImR_LocatorC.i:
	* tao/PortableServer/ImplRepoC.cpp:
	* tao/PortableServer/ImplRepoC.h:
	* tao/PortableServer/PortableServerC.cpp
	* tao/PortableServer/ImplRepoC.i: Regenerated ode and patched them. 

	* tao/PortableServer/diffs/Default_ORT.diff:
	* tao/PortableServer/diffs/ImplRepo.diff:
	* tao/diffs/Dynamic.diff:
	* tao/diffs/OctetSeq.diff: Updated the diff files. 

	  With the above checkin a simple server and client should build
	  without link errors when explicit template instantiations have
	  been turned on.
	
Fri Apr 25 17:04:34 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* TAO_IDL/be/be_type.cpp:
	* TAO_IDL/be/be_visitor_sequence/sequence_cs.cpp: